HPC-9557: Fix other issues relating to table formatting and cell wrapping, allow to opt-out of cell wrapping

--- a/html/themes/custom/common_design_subtheme/components/ghi-table-progress-indicator/ghi-table-progress-indicator.css
+++ b/html/themes/custom/common_design_subtheme/components/ghi-table-progress-indicator/ghi-table-progress-indicator.css
@@ -1,4 +1,4 @@
-.has-progress-indicator tbody td[data-progress-group] .value-wrapper-outer {
+.has-progress-indicator tbody td[data-progress-group] .cell-wrapper-inner {
   position: relative;
 }
 
